--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -808,6 +808,12 @@ footer {
 				color: white;
 			}
 		}
+		.release-cover-img {
+			width: 20rem !important;
+		}
+		.release-content {
+			width: 20rem;
+		}
 	}
 }
 
