god-complex-release

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -810,7 +810,9 @@ footer {
 		}
 	}
 		.release-cover-img {
-			width: 20rem !important;
+			img{
+				width: 20rem !important;
+			}
 		}
 		.release-content {
 			width: 20rem;
