--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -769,7 +769,7 @@ footer li {
   background-color: #ff2b59;
   color: white;
 }
-.single-release .release-cover-img {
+.single-release .release-cover-img img {
   width: 20rem !important;
 }
 .single-release .release-content {
