god-complex-release

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -809,21 +809,21 @@ footer {
 			}
 		}
 	}
-		.release-cover-img {
-			img{
-				width: 20rem !important;
-				height: auto;
-			}
-		}
-		.release-content {
-			width: 20rem;
-		}
-		.product-image-wrapper{
-			img{
-				width: 20rem !important;
-				height: auto;
-			}
-		}
+		// .release-cover-img {
+		// 	img{
+		// 		width: 20rem !important;
+		// 		height: auto;
+		// 	}
+		// }
+		// .release-content {
+		// 	width: 20rem;
+		// }
+		// .product-image-wrapper{
+		// 	img{
+		// 		width: 20rem !important;
+		// 		height: auto;
+		// 	}
+		// }
 }
 
 // WooCommerce Styles
