--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -818,12 +818,12 @@ footer {
 		// .release-content {
 		// 	width: 20rem;
 		// }
-		// .product-image-wrapper{
-		// 	img{
-		// 		width: 20rem !important;
-		// 		height: auto;
-		// 	}
-		// }
+		.product-image-wrapper{
+			img{
+				width: 20rem !important;
+				height: auto;
+			}
+		}
 }
 
 // WooCommerce Styles
